# MI-BCI-Classification

./: README.md
Baseline/: .gitignore  README.md  pyproject.toml
Baseline/baseline/: main.py  preprocess.py  train.py
wgan_gp_project/: MAIN.py  analysis.py  baseline.py  main.py  pyproject.toml
wgan_gp_project/WGAN_GP_CL_S1-2_ftr_per_class/: ALL_RUNS_Combined_Summary_Final.csv
wgan_gp_project/WGAN_GP_CL_S1_20tr_per_class/: ALL_RUNS_Combined_Summary_Final.csv
wgan_gp_project/WGAN_GP_CL_S1_20tr_per_class/Analysis_subject_9/: S9_analysis_stats_with_FID.csv
wgan_gp_project/WGAN_GP_CL_S1_20tr_per_class/analysis_subject_1/: S1_analysis_stats.csv
wgan_gp_project/WGAN_GP_CL_S1_20tr_per_class/analysis_subject_2/: S2_analysis_stats.csv
wgan_gp_project/WGAN_GP_CL_S1_20tr_per_class/analysis_subject_3/: S3_analysis_stats.csv
wgan_gp_project/WGAN_GP_CL_S1_20tr_per_class/analysis_subject_4/: S4_analysis_stats.csv
wgan_gp_project/WGAN_GP_CL_S1_20tr_per_class/analysis_subject_5/: S5_analysis_stats.csv
wgan_gp_project/WGAN_GP_CL_S1_30tr_per_class/: ALL_RUNS_Combined_Summary_Final.csv
wgan_gp_project/WGAN_GP_CL_S1_40tr_per_class/: ALL_RUNS_Combined_Summary_Final.csv
wgan_gp_project/WGAN_GP_CL_S1_50tr_per_class/: ALL_RUNS_Combined_Summary_Final.csv
wgan_gp_project/WGAN_GP_CL_S2-1_ftr_per_class/: ALL_RUNS_Combined_Summary_Final.csv
wgan_gp_project/WGAN_GP_CL_S2_20tr_per_class/: ALL_RUNS_Combined_Summary_Final.csv
wgan_gp_project/WGAN_GP_CL_S2_30tr_per_class/: ALL_RUNS_Combined_Summary_Final.csv
wgan_gp_project/WGAN_GP_CL_S2_40tr_per_class/: ALL_RUNS_Combined_Summary_Final.csv
wgan_gp_project/WGAN_GP_CL_S2_50tr_per_class/: ALL_RUNS_Combined_Summary_Final.csv
wgan_gp_project/src/: Training.py  models.py  preprocessing.py  training.py
(+190 files in other folders)
