[tool.poetry]
name = "baseline"
version = "0.1.0"
description = "A package for EEG data preprocessing and classification."
authors = ["Sourojit Goswami <goswamisourojit@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "baseline" }]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"
scipy = "^1.9"
scikit-learn = "^1.0"
mne = "^1.3"

[tool.poetry.scripts]
baseline-main = "baseline.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
