[tool.poetry]
name = "wgan_gp_project"
version = "0.1.0"
description = "WGAN-GP for synthetic EEG data generation."
authors = ["Sourojit <goswamisourojit@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.23"
tensorflow = "^2.10"
scipy = "^1.10"
scikit-learn = "^1.2"
matplotlib = "^3.7"
mne = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
