[tool.poetry]
name = "wgan_gp_project"
version = "0.1.0"
description = "WGAN-GP for synthetic EEG data generation."
authors = ["Sourojit <goswamisourojit@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.23"
scipy = "^1.10"
scikit-learn = "^1.2"
matplotlib = "^3.7"
mne = "^1.4"
tensorflow = "2.16.1"
tensorflow-addons = "^0.23.0"
pyriemann = "^0.7"
torch = "^2.7.0"
tf2onnx = "^1.16.1"
onnx = "^1.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
